# dfrun

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  release.sh  test.Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  tests.rs
