[package]
name = "dfrun"
version = "0.0.1"
authors = ["David <david@magichour.ai>"]
description = "A simple Dockerfile runner"
license = "MIT"
repository = "https://github.com/magichourhq/dfrun"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "dfrun"
path = "src/main.rs"

