[package]
name = "dfrun"
version = "0.0.14"
authors = ["David Hu <david@magichour.ai>"]
description = "A simple Dockerfile runner"
license = "MIT"
repository = "https://github.com/magichourhq/dfrun"
edition = "2021"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
regex = "1.11.1"
colored = "3.0.0"

[[bin]]
name = "dfrun"
path = "src/main.rs"
